2002-06-24  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-mdi-utils.c: 
	* src/gnome/dialog-price-edit-db.c: 
	* src/gnome/window-acct-tree.c: 
	* src/gnome/window-main.c: Fix parameter names in documentation.

2002-06-23  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/dialog-sxsincelast.c: Lists of SX instances [the
	Reminders and To-Create] are now trees instead of clists.
	Better structure of internal state.
	Fixed multiple-SX-reminder selection/processing bug [Bug#85997].

2002-06-22  David Hampton  <hampton@employees.org>

	* src/gnc-module/gnc-module.{c,h,scm} :
	* src/gnc-module/gw-gnc-module-spec.scm : Add support for loading
	an optional module.  I.E. Don't complain if you can't find it.

	* src/gnome/window-main.c : Add a File/Import submenu that will
	contain entries for QIF, OFX, etc.

	* src/import-export/Makefile.am :
	* src/import-export/gncmod-generic-import.c :
	* src/import-export/ofx/gnc-ofx-import.c :
	* src/import-export/ofx/gncmod-ofx-import.c :
	* src/scm/main.scm : OFX module loading tweaks.

	* src/gnome-utils/gnc-menu-extensions.[ch]:
	* src/gnome-utils/gw-gnome-utils-spec.scm: Add a new
	gnc_add_c_extension function. Rename the existing
	gnc_add_extension to gnc_add_scm_extension.

	* src/gnome/window-main.c:
	* src/import-export/qif-import/druid-qif-import.[ch]:
	* src/import-export/qif-import/gncmod-qif-import.c: Create the
	"Import QIF" menu item from within the QIF module.

2002-06-21  Derek Atkins   <derek@ihtfp.com>

	* integrate the Billing Terms into the Core, GUI, and XML Backend
	for the rest of the business objects that need billing terms.

	* .../business-core/gncBillTerm*.[ch]: Add Billing Term objects.
	Currently there are "Days" and "Proximo" billing terms available.

	* .../business-core/file/gnc-bill-term*: XML Backend storage for
	Billing Terms.

	* .../business-gnome/dialog-bill-terms.[ch]: Dialog to create,
	view, and edit Billing Terms.

	* .../business-gnome/business-prefs.scm: move the business