@@ -30,5 +30,5 @@
  *     are merged into the existing session (if any). The current
  *     session continues to remain open for editing. */
 void              gnc_file_ofx_import (void);
-
+SCM  scm_gnc_file_ofx_import (void);
 #endif
